Fix compile warnings on mantis runtime module